@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-03T01:14:42Z",
-  "count_outdated" : 1592,
-  "uniques_outdated" : 1112,
-  "count" : 1606,
-  "uniques" : 1126,
+  "timestamp" : "2025-10-04T01:12:43Z",
+  "count_outdated" : 1593,
+  "uniques_outdated" : 1113,
+  "count" : 1607,
+  "uniques" : 1127,
   "clones" : [
-    {
-      "timestamp": "2025-09-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-21T00:00:00Z",
       "count": 2,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-10-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
