@@ -1,3 +1,12 @@
+2025-10-04T01:12:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18237449378 # 786
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-04
+* notice: last 14d: unq all: 4 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 1112 1592 / 1126 1606
+* notice: next accum: outdated-unq outdated-all / unq all: 1113 1593 / 1127 1607
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-20] / [2025-10-04]
+
 2025-10-03T01:14:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18210002877 # 785
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-03
